data/derived/comb/progs/unify/prog7412.ml.out
Characters 291-312:
  removeZero (add (padZero l1 l2));;
             ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list * int list
       but an expression was expected of type int list
